--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Untitled</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -19,7 +9,8 @@
         body {
             margin: 0;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background-color: #f2f2f7;
+            background-color: #002F6C; /* Azul bandera de Cuba */
+            color: white;
         }
 
         /* Contenedor del aviso */
@@ -45,28 +36,28 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             overflow: hidden;
             padding: 20px;
+            text-align: center;
         }
 
         /* Slide */
         .slide {
             display: none;
-            text-align: center;
         }
 
         .slide h3 {
             font-size: 18px;
-            color: #333;
+            color: #002F6C; /* Azul */
         }
 
         .slide p {
             font-size: 14px;
-            color: #666;
+            color: #333;
             margin: 10px 0;
         }
 
         .slide i {
             font-size: 40px;
-            color: #007aff;
+            color: #E50019; /* Rojo bandera de Cuba */
             margin-bottom: 10px;
         }
 
@@ -74,7 +65,7 @@
             display: flex;
             justify-content: space-between;
             padding: 10px;
-            background: #f2f2f7;
+            background: #F4F4F4;
             border-top: 1px solid #ddd;
         }
 
@@ -82,7 +73,7 @@
             background: transparent;
             border: none;
             font-size: 16px;
-            color: #007aff;
+            color: #E50019; /* Rojo */
             cursor: pointer;
             padding: 10px;
         }
@@ -98,12 +89,22 @@
             justify-content: center;
             gap: 5px;
             font-weight: bold;
-            color: #007aff;
+            color: #E50019;
         }
 
         /* Ocultar aviso después de completarlo */
         .hidden {
             display: none !important;
+        }
+
+        /* Input para el nombre */
+        #username {
+            width: 80%;
+            padding: 8px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            text-align: center;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -130,10 +131,7 @@
             <div class="slide" id="slide3">
                 <i class="fas fa-user"></i>
                 <h3>Tu perfil</h3>
-                <input type="text" id="username" placeholder="Tu nombre" style="width: 80%; padding: 8px; border-radius: 8px; border: 1px solid #ccc; text-align: center;">
-                <input type="file" id="file-input" accept="image/*" style="margin-top: 10px;">
-                <br>
-                <img id="profile-pic" src="https://via.placeholder.com/80" alt="Foto de perfil" style="width: 80px; height: 80px; border-radius: 50%; margin-top: 10px;">
+                <input type="text" id="username" placeholder="Tu nombre">
             </div>
 
             <!-- Slide 4: Verificación -->
@@ -156,15 +154,11 @@
 
         // Muestra la primera página y oculta las demás
         function updateSlide() {
-            // Ocultar todos los slides
             for (let i = 1; i <= 4; i++) {
                 document.getElementById("slide" + i).style.display = "none";
             }
 
-            // Mostrar solo el slide actual
             document.getElementById("slide" + currentSlide).style.display = "block";
-
-            // Habilitar/deshabilitar botones
             document.getElementById("prevBtn").disabled = currentSlide === 1;
             document.getElementById("nextBtn").innerText = currentSlide === 4 ? "Comenzar" : "Siguiente";
         }
@@ -186,18 +180,7 @@
             }
         }
 
-        // Actualizar nombre y foto de perfil
-        document.getElementById("file-input").addEventListener("change", function(event) {
-            const file = event.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = function(e) {
-                    document.getElementById("profile-pic").src = e.target.result;
-                }
-                reader.readAsDataURL(file);
-            }
-        });
-
+        // Actualizar nombre
         document.getElementById("username").addEventListener("input", function() {
             document.getElementById("user-display").innerText = this.value || "Usuario";
         });
