--- a/index.html
+++ b/index.html
@@ -240,8 +240,12 @@
                 <button class="close-settings" id="closeSettings">&times;</button>
             </div>
             <div class="settings-body">
-                <div class="settings-item" onclick="showBeappInfo()">
-                    <h3>¿Qué es BeApp?</h3>
+                <div class="settings-item" onclick="toggleDarkMode()">
+                    <h3>Modo Claro/Oscuro</h3>
+                    <i class="fas fa-moon"></i>
+                </div>
+                <div class="settings-item" onclick="showFaqSupport()">
+                    <h3>FAQ y Soporte</h3>
                     <i class="fas fa-chevron-right"></i>
                 </div>
             </div>
@@ -311,3 +315,34 @@
 
 </body>
 </html>
+<proposed_insert before="</body>">
+    <!-- Modal de FAQ y Soporte -->
+    <div class="faq-modal" id="faqModal">
+        <div class="faq-content">
+            <div class="faq-header">
+                <button class="back-to-settings" onclick="backToSettings()">
+                    <i class="fas fa-arrow-left"></i>
+                </button>
+                <h2>FAQ y Soporte</h2>
+            </div>
+            <div class="faq-search">
+                <i class="fas fa-search"></i>
+                <input type="text" id="faqSearch" placeholder="Buscar artículos...">
+            </div>
+            <div class="faq-body">
+                <div class="faq-item" onclick="showFaqArticle('about')">
+                    <h3>¿Qué es BeApp?</h3>
+                    <i class="fas fa-chevron-right"></i>
+                </div>
+                <div class="faq-item">
+                    <h3>¿Cómo instalar aplicaciones?</h3>
+                    <i class="fas fa-chevron-right"></i>
+                </div>
+                <div class="faq-item">
+                    <h3>Problemas comunes</h3>
+                    <i class="fas fa-chevron-right"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+</proposed_insert>
