--- a/index.html
+++ b/index.html
@@ -347,11 +347,21 @@
             <i class="fas fa-gamepad"></i>
             <span>Games</span>
         </a>
+        <a href="#websites" class="nav-item" onclick="showWebsitesSection()">
+            <i class="fas fa-globe"></i>
+            <span>Websites</span>
+        </a>
         <a href="#editorial" class="nav-item" onclick="showEditorialSection()">
             <i class="fas fa-edit"></i>
             <span>Editorial</span>
         </a>
     </nav>
+
+    <!-- Websites Section -->
+    <div id="websitesSection" class="section-container" style="display: none;">
+        <h2 class="section-title">Popular Websites</h2>
+        <div id="websitesContainer" class="apps-grid"></div>
+    </div>
 
     <!-- Games Section -->
     <div id="gamesSection" class="section-container" style="display: none;">
