--- a/index.html
+++ b/index.html
@@ -337,21 +337,26 @@
         </div>
     </div>
 
-    <!-- Bottom Navigation Bar -->
-    <nav class="bottom-nav">
-        <a href="#" class="nav-item active">
+    <!-- Menu Button -->
+    <button class="menu-button" onclick="toggleMenu()">
+        <i class="fas fa-bars"></i>
+    </button>
+
+    <!-- Side Menu -->
+    <nav class="side-menu">
+        <a href="#" class="menu-item active">
             <i class="fas fa-home"></i>
             <span>Home</span>
         </a>
-        <a href="#games" class="nav-item" onclick="showGamesSection()">
+        <a href="#games" class="menu-item" onclick="showGamesSection()">
             <i class="fas fa-gamepad"></i>
             <span>Games</span>
         </a>
-        <a href="#websites" class="nav-item" onclick="showWebsitesSection()">
+        <a href="#websites" class="menu-item" onclick="showWebsitesSection()">
             <i class="fas fa-globe"></i>
             <span>Websites</span>
         </a>
-        <a href="#editorial" class="nav-item" onclick="showEditorialSection()">
+        <a href="#editorial" class="menu-item" onclick="showEditorialSection()">
             <i class="fas fa-edit"></i>
             <span>Editorial</span>
         </a>
