--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
             <div class="slide" id="slide2">
                 <i class="fas fa-globe"></i>
                 <h3>Disponibilidad de apps</h3>
-                <p>Algunas apps pueden no estar disponibles en tu país. Las aplicaciones cambian según la región.</p>
+                <p>Algunas apps pueden no estar disponibles en tu país. Las aplicaciones se filtran automáticamente según tu región.</p>
+                <div id="country-info" style="margin-top: 10px; padding: 10px; background: #f0f0f0; border-radius: 8px;">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <span id="user-country">Detectando tu país...</span>
+                </div>
             </div>
 
             <!-- Slide 3: Registro de usuario -->
@@ -356,7 +360,7 @@
         </div>
     </div>
 
-    
+
 
     <!-- Side Menu -->
     <nav class="side-menu">
